# ufsc-iniciacao-cientifica

./: .gitignore  README.md  raspberry_pi_pico_first_test.py
api-rust/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  start.sh  test.csv
api-rust/.sqlx/: query-29a63ada9adffd55ecbceba963725a68370c0447ff6e4cbcf896980ce9f87715.json  query-6493c979338f16f5ec119503c715c992c72c0309a9e9d40505a7913389fa5ea0.json  query-7a0ae74f45f6cd51361268c585332d1150b3ba4efead9881394813513e76e8e4.json  query-9d09e0c35418cb133bd807df69fa4a2b253cc75ca0fed4f86685584c1a5448d7.json  query-df782ba03ff0bc9d60fce24e85835e9edc40c8199fb09cd5180ef9855a6413ef.json  query-e95ca58a9e0e96079629f7de64470c6ba4aae107f3eba634f6ad60c2a043d25a.json  query-ff2cbb556ae535a8509331e87235642514546942b6d0da81af50026c108e3c8c.json
api-rust/migrations/: 20240316122000_init.down.sql  20240316122000_init.up.sql
api-rust/src/: handler.rs  main.rs  models.rs
api-typescript/: .env  .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
api-typescript/src/: db-config.ts  index.ts
api-typescript/src/entity/: MicrophoneModel.ts  MicrophoneSchema.ts
codigo_sensor_rust/: Cargo.toml
codigo_sensor_rust/src/: main.rs
mock-rust/: Cargo.toml
mock-rust/src/: main.rs
mock_client_socket/: Cargo.toml
mock_client_socket/src/: main.rs
ui/: .env.example  dados_trator.csv  get_ip.py  handle_api_url.py  pubspec.yaml
ui/lib/: chart.dart  filter.dart  home.dart  main.dart  videos.dart
