[package]
name = "microfone-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
askama = { version = "0.12.0", features = ["markdown"] }
sqlx = { version = "0.7.0", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "time",
  "chrono",
  "uuid",
  # "bigdecimal",
] }
# bigdecimal = { version = "0.4.0", features = ["serde"] }
tower-http = { version = "0.4", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
sqlx-cli = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
csv = "1.3.0"
tokio-util = "0.7.10"
csv-async = "1.3.0"
