[package]
name = "sensor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.2", features = ["blocking", "json"] }
serde = {version = "1.0.197", features = ["derive"]}
tokio = {version = "1.36.0", features = ["full"]}
tokio-modbus = "0.11.0"
tokio-serial = "5.4.4"
