[package]
name = "mock_client_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30", features = ["sink"] }
reqwest = { version = "0.12.5", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
